recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:2: error: not found: type double
	avance(50:double)
                  ^