recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
	avance(50:double)
}
